tests/invalid/Return_Invalid_11.whiley
import * from whiley.lang.*

function f(int x) -> void:
    return x
